# REmatch-datasets

./: CMakeLists.txt
cpp/: test-performance-stream.cpp  test-performance.cpp
datasets/dna/outputs/k10/: exp000.txt
datasets/dna/outputs/k100/: exp000.txt  exp001.txt  exp003.txt  exp004.txt  exp006.txt  exp007.txt  exp008.txt  exp009.txt  exp010.txt  exp011.txt  exp012.txt  exp013.txt  exp014.txt  exp015.txt  exp016.txt
datasets/dna/outputs/k1000/: exp000.txt  exp001.txt  exp002.txt  exp003.txt  exp004.txt  exp005.txt  exp006.txt  exp007.txt  exp008.txt  exp009.txt  exp010.txt  exp011.txt  exp012.txt  exp013.txt  exp014.txt  exp015.txt  exp016.txt
datasets/dna/outputs/k10000/: exp000.txt  exp001.txt  exp002.txt  exp003.txt  exp004.txt  exp005.txt  exp006.txt  exp007.txt  exp008.txt  exp009.txt  exp010.txt  exp011.txt  exp012.txt  exp013.txt  exp014.txt  exp015.txt  exp016.txt
datasets/dna/outputs/k100000/: exp000.txt  exp001.txt  exp002.txt  exp003.txt  exp004.txt  exp005.txt  exp006.txt  exp007.txt  exp008.txt  exp009.txt  exp010.txt  exp011.txt  exp012.txt  exp013.txt  exp014.txt  exp015.txt  exp016.txt
datasets/dna/outputs/k1000000/: exp000.txt  exp001.txt  exp002.txt  exp004.txt  exp005.txt  exp006.txt  exp007.txt  exp008.txt  exp009.txt  exp010.txt  exp011.txt  exp012.txt  exp013.txt  exp014.txt  exp015.txt  exp016.txt
datasets/literature/outputs/k10/: exp000.txt  exp001.txt  exp002.txt  (+133 more)
scripts/: test-correctness.py  test-performance.py  test_correctness.py  test_performance.py  test_performance_stream.py
scripts/config/: test_correctness-config.json
(+499 files in other folders)
